# Fool-Game

./: .clang-format  CMakeLists.txt  README.md  card.hpp  common.hpp  deck.hpp  game_state.cpp  game_state.hpp  main.cpp  player.hpp  validator.hpp
